--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   get:
   flame: ^1.8.1
+  dart_eval:
 
 
   # The following adds the Cupertino Icons font to your application.
